<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/stTvAngka1" />

        <EditText
            android:id="@+id/angka1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka1"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/strTvAngka2" />

        <EditText
            android:id="@+id/angka2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka2"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:text="@string/strBtnTambah" />

        <Button
            android:id="@+id/btnKurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_marginStart="5dp"
            android:text="@string/strBtnKurang" />

        <Button
            android:id="@+id/btnKali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            grid:layout_gravity="fill_horizontal"
            android:text="@string/strBtnKali" />

        <Button
            android:id="@+id/btnBagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            grid:layout_gravity="fill_horizontal"
            android:layout_marginStart="5dp"
            android:text="@string/strBtnBagi" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:id="@+id/textView3"
            android:text="@string/strTvHasil"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/hasil"
            android:text=""/>
    </LinearLayout>


</LinearLayout>
